--- a/HTML_Code/index.html
+++ b/HTML_Code/index.html
@@ -26,13 +26,13 @@
 </nav>
 
 <main>
-    <img src="../img/Frontpage.png" alt="Random picture" class="picture">
+    <img alt="Random picture" class="picture" src="../img/Frontpage2.jpg">
 </main>
 
 <footer>
-    <p id="rettigheter">Alt innholdet er beskyttet i henhold til til norsk lov om opphavsrett, Åndsverkloven.
-        Alle rettigheter: Oblig 2021</p>
-    <a href="KontaktInformasjon.html" id="kontaktinfo">Kontakt informasjon link</a>
+    <p id="Beskyttet">Alt innholdet er beskyttet i henhold til til norsk lov om opphavsrett, Åndsverkloven.</p>
+    <p id="rettigheter">Alle rettigheter: Oblig 2021</p>
+    <a href="KontaktInformasjon.html" id="kontaktinfo">Kontakt informasjon</a>
     <p id="navn">&copy; Mathias van der Bend</p>
 </footer>
 
