--- a/HTML_Code/BestilleBord.html
+++ b/HTML_Code/BestilleBord.html
@@ -13,7 +13,7 @@
 <nav>
     <div class="nav-leftside">
         <div class="brand">
-            <a id="restaurant" href="Frontpage.html">Oblig Restaurant</a>
+            <a id="restaurant" href="index.html">Oblig Restaurant</a>
         </div>
     </div>
 
@@ -38,20 +38,18 @@
 
 <main>
     <h1>Bestill bord!</h1>
-    <div>
+    <div class="knapper">
         <Button>Antall personer</Button>
         <Button>Klokkeslett</Button>
     </div>
     <div>
-    <svg width="400" height="110">
-        <rect width="300" height="100"/>
-    </svg>
+        <img src="../img/kalender.png" alt="Kalender" class="kalender">
     </div>
 </main>
 
 <footer>
-    <p id="rettigheter">Alt innholdet er beskyttet i henhold til til norsk lov om opphavsrett, Åndsverkloven.
-    Alle rettigheter: Oblig 2021</p>
+    <p id="Beskyttet">Alt innholdet er beskyttet i henhold til til norsk lov om opphavsrett, Åndsverkloven.</p>
+    <p id="rettigheter">Alle rettigheter: Oblig 2021</p>
     <a href="KontaktInformasjon.html" id="kontaktinfo">Kontakt informasjon</a>
     <p id="navn">&copy; Mathias van der Bend</p>
 </footer>
