--- a/HTML_Code/FinnOss.html
+++ b/HTML_Code/FinnOss.html
@@ -3,11 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <title>Finn Oss</title>
-    <link rel="stylesheet" href="../Styling/Frontpage.css">
+    <link rel="stylesheet" href="../Styling/Main.css">
+    <link rel="stylesheet" href="../Styling/FinnOss.css">
+    <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&display=swap" rel="stylesheet">
 </head>
 <body>
 
 
+<nav>
+    <div class="nav-leftside">
+        <div class="brand">
+            <a id="restaurant" href="index.html">Oblig Restaurant</a>
+        </div>
+    </div>
+
+    <div class="nav-rightside">
+        <div class=nav-link-wrapper>
+            <a id="meny" href="SeMeny.html">Meny</a>
+        </div>
+        <div class=nav-link-wrapper>
+            <a id="bestillbord" href="BestilleBord.html">Bestill Bord</a>
+        </div>
+        <div class=nav-link-wrapper>
+            <a id="takeaway" href="TakeAway.html">Take away</a>
+        </div>
+        <div class=nav-link-wrapper>
+            <a id="kontaktinformasjon" href="KontaktInformasjon.html">Kontakt informasjon</a>
+        </div>
+        <div class=nav-link-wrapper>
+            <a id="finnoss" href="FinnOss.html">Finn oss</a>
+        </div>
+    </div>
+</nav>
+
+<main>
+    <div class="flex1">
+        <h2>Finn Oss!</h2>
+    </div>
+
+    <div class="flex2">
+        <div class="IMG"> <img src="../img/Posisjon.png" alt="Posisjons kart"> </div>
+
+        <div class = "Kontaktinfo-Container">
+            <h3>Oblig Restaurant</h3>
+            <button>Hvor er du? Dropdown</button>
+            <button>Transportmiddel?(Gå, Sykle, Bil, Buss) Dropdown</button>
+            <p>//Etterfulgt av veibeskrivelse</p>
+        </div>
+    </div>
+
+
+</main>
+
+
+<footer>
+    <p id="Beskyttet">Alt innholdet er beskyttet i henhold til til norsk lov om opphavsrett, Åndsverkloven.</p>
+    <p id="rettigheter">Alle rettigheter: Oblig 2021</p>
+    <a href="KontaktInformasjon.html" id="kontaktinfo">Kontakt informasjon</a>
+    <p id="navn">&copy; Mathias van der Bend</p>
+</footer>
 
 </body>
 </html>
