--- a/HTML_Code/KontaktInformasjon.html
+++ b/HTML_Code/KontaktInformasjon.html
@@ -3,9 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <title>Kontakt Informasjon</title>
-    <link rel="stylesheet" href="../Styling/Frontpage.css">
+    <link rel="stylesheet" href="../Styling/Main.css">
+    <link rel="stylesheet" href="../Styling/KontaktInformasjon.css">
+    <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&display=swap" rel="stylesheet">
 </head>
 <body>
+
+<nav>
+    <div class="nav-leftside">
+        <div class="brand">
+            <a id="restaurant" href="index.html">Oblig Restaurant</a>
+        </div>
+    </div>
+
+    <div class="nav-rightside">
+        <div class=nav-link-wrapper>
+            <a id="meny" href="SeMeny.html">Meny</a>
+        </div>
+        <div class=nav-link-wrapper>
+            <a id="bestillbord" href="BestilleBord.html">Bestill Bord</a>
+        </div>
+        <div class=nav-link-wrapper>
+            <a id="takeaway" href="TakeAway.html">Take away</a>
+        </div>
+        <div class=nav-link-wrapper>
+            <a id="kontaktinformasjon" href="KontaktInformasjon.html">Kontakt informasjon</a>
+        </div>
+        <div class=nav-link-wrapper>
+            <a id="finnoss" href="FinnOss.html">Finn oss</a>
+        </div>
+    </div>
+</nav>
+
+<main>
+    <div class="flex1">
+    <h2>Kontakt Informasjon</h2>
+
+
+    <h3>Sosiale medier:</h3>
+    <a id="Facebook" href="https://www.facebook.com">Facebook Link</a>
+    <a id="Instagram" href="https://www.instagram.com">Instagram Link</a>
+
+    </div>
+
+    <div class="flex2">
+    <div class="IMG"> <img src="../img/Posisjon.png" alt="what"></div>
+
+    <div class = "Kontaktinfo-Container">
+        <h3>Oblig Restaurant</h3>
+        <p>Telefon: xxx xx xxx</p>
+        <p>Epost: obligrestaurant@oblig.no</p>
+        <br><br>
+        <p>Åpningstider:</p>
+        <p>Tirsdag - Fredag: 10:00 - 23:00.</p>
+        <p>Fredag - Søndag: 16:00 - 00:00.</p>
+        <br><br><br>
+        <p>Daglig leder: Oblig Leder</p>
+        <p>Telefon: yyy yy yyy</p>
+        <p>Epost: dagliglederOblig@oblig.no</p>
+    </div>
+    </div>
+</main>
+
+<footer>
+    <p id="Beskyttet">Alt innholdet er beskyttet i henhold til til norsk lov om opphavsrett, Åndsverkloven.</p>
+    <p id="rettigheter">Alle rettigheter: Oblig 2021</p>
+    <a href="KontaktInformasjon.html" id="kontaktinfo">Kontakt informasjon</a>
+    <p id="navn">&copy; Mathias van der Bend</p>
+</footer>
 
 </body>
 </html>
