--- a/HTML_Code/SeMeny.html
+++ b/HTML_Code/SeMeny.html
@@ -3,9 +3,143 @@
 <head>
     <meta charset="UTF-8">
     <title>Meny</title>
-    <link rel="stylesheet" href="../Styling/Frontpage.css">
+    <link rel="stylesheet" href="../Styling/Main.css">
+    <link rel="stylesheet" href="../Styling/SeMeny.css">
+    <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&display=swap" rel="stylesheet">
 </head>
 <body>
+
+<nav>
+    <div class="nav-leftside">
+        <div class="brand">
+            <a id="restaurant" href="index.html">Oblig Restaurant</a>
+        </div>
+    </div>
+
+    <div class="nav-rightside">
+        <div class=nav-link-wrapper>
+            <a id="meny" href="SeMeny.html">Meny</a>
+        </div>
+        <div class=nav-link-wrapper>
+            <a id="bestillbord" href="BestilleBord.html">Bestill Bord</a>
+        </div>
+        <div class=nav-link-wrapper>
+            <a id="takeaway" href="TakeAway.html">Take away</a>
+        </div>
+        <div class=nav-link-wrapper>
+            <a id="kontaktinformasjon" href="KontaktInformasjon.html">Kontakt informasjon</a>
+        </div>
+        <div class=nav-link-wrapper>
+            <a id="finnoss" href="FinnOss.html">Finn oss</a>
+        </div>
+    </div>
+</nav>
+
+<main>
+    <h2>DAGENS</h2>
+    <div class = "meny-container">
+
+        <div class="item-container">
+            <img src="../img/dagens.jpg" alt="Random picture" class="meny-picture">
+        </div>
+        <div class="item-container">
+            <p>Dagens frokost & lunsj</p>
+            <p>Eple i biter, kaffe, melk, eggerøre med skinkebiter, to brødskiver med majones & to knekkebrød med leverpostei og majones</p>
+
+            <p>Pris: 49.90,-</p>
+        </div>
+    </div>
+
+    <h2>Frokost & Lunsj</h2>
+    <div class = "meny-container">
+        <div class = "item-container">
+            <img src="../img/frokostblanding.jpg" alt="Frokostblanding coco pops" class="meny-picture">
+            <p>Frokostblanding - coco pops i melk</p>
+            <p> </p>
+            <p>Pris: 19.90,-</p>
+        </div>
+
+        <div class = "item-container">
+          <img src="../img/Frontpage.png" alt="Skive med melk og omelett" class="meny-picture">
+            <p>Ristet brød med omelett og melk</p>
+            <p> </p>
+            <p>Pris: 29.90,-</p>
+        </div>
+    </div>
+
+    <h2>Middag</h2>
+    <div class = "meny-container">
+        <div class="item-container">
+            <img src="../img/Frontpage2.jpg" alt="Random picture" class="meny-picture">
+            <p>Nachoes, med rømme og tacosaus</p>
+            <p> </p>
+            <p>Pris: 39.90,-</p>
+        </div>
+
+        <div class="item-container">
+            <img src="../img/dagensmiddag.jpg" alt="Fajitas i pita" class="meny-picture">
+            <p>Kylling-Fajitas i pita med salat</p>
+            <p> </p>
+            <p>Pris: 59.90,-</p>
+        </div>
+
+        <div class="item-container">
+            <img src="../img/varruller.jpg" alt="Vårruller" class="meny-picture">
+            <p>Vår ruller med ris</p>
+            <p> </p>
+            <p>Pris: 39.90,-</p>
+        </div>
+    </div>
+
+    <h2>Dessert</h2>
+    <div class = "meny-container">
+        <div class="item-container">
+            <img src="../img/is.jpg" alt="Iskrem" class="meny-picture">
+            <p>Non-stop is, Hennig Olsen</p>
+            <p> </p>
+            <p>Pris: 49.90,-</p>
+        </div>
+    </div>
+
+    <h2>Drikke</h2>
+    <div class = "meny-container">
+        <div class="item-container">
+            <img src="../img/Ol.jpg" alt="Random picture" class="meny-picture">
+            <p>Hansa Pilsner, 0.5l</p>
+            <p> </p>
+            <p>Pris: 49.90,-</p>
+        </div>
+
+        <div class="item-container">
+            <img src="../img/Kaffe.jpg" alt="Random picture" class="meny-picture">
+            <p>Svart Traktet Kaffe (Americano), 0.33l</p>
+            <p>Pris: 15,-</p>
+        </div>
+
+        <div class="item-container">
+            <img src="../img/Oboy.jpg" alt="Random picture" class="meny-picture">
+            <p>O'boy melk, 0.33l</p>
+            <p>Pris: 25,-</p>
+        </div>
+
+        <div class="item-container">
+            <img src="../img/melk.jpg" alt="Random picture" class="meny-picture">
+            <p>Lett melk, 0.33l</p>
+            <p>Pris: 10,-</p>
+        </div>
+    </div>
+
+
+</main>
+
+
+<footer>
+    <p id="Beskyttet">Alt innholdet er beskyttet i henhold til til norsk lov om opphavsrett, Åndsverkloven.</p>
+    <p id="rettigheter">Alle rettigheter: Oblig 2021</p>
+    <a href="KontaktInformasjon.html" id="kontaktinfo">Kontakt informasjon</a>
+    <p id="navn">&copy; Mathias van der Bend</p>
+</footer>
 
 </body>
 </html>
