--- a/HTML_Code/TakeAway.html
+++ b/HTML_Code/TakeAway.html
@@ -3,9 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <title>Take away</title>
-    <link rel="stylesheet" href="../Styling/Frontpage.css">
+    <link rel="stylesheet" href="../Styling/Main.css">
+    <link rel="stylesheet" href="../Styling/TakeAway.css">
+    <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&display=swap" rel="stylesheet">
 </head>
 <body>
+
+<nav>
+    <div class="nav-leftside">
+        <div class="brand">
+            <a id="restaurant" href="index.html">Oblig Restaurant</a>
+        </div>
+    </div>
+
+    <div class="nav-rightside">
+        <div class=nav-link-wrapper>
+            <a id="meny" href="SeMeny.html">Meny</a>
+        </div>
+        <div class=nav-link-wrapper>
+            <a id="bestillbord" href="BestilleBord.html">Bestill Bord</a>
+        </div>
+        <div class=nav-link-wrapper>
+            <a id="takeaway" href="TakeAway.html">Take away</a>
+        </div>
+        <div class=nav-link-wrapper>
+            <a id="kontaktinformasjon" href="KontaktInformasjon.html">Kontakt informasjon</a>
+        </div>
+        <div class=nav-link-wrapper>
+            <a id="finnoss" href="FinnOss.html">Finn oss</a>
+        </div>
+    </div>
+</nav>
+
+<main>
+    <div>
+        <button>Dato</button>
+        <button>Klokkeslett</button>
+    </div>
+
+    <div class="FilterOptions">
+        <p>Filter:</p>
+        <button>Middag</button>               
+        <button>Frokost/Lunsj</button>
+        <button>Drikke</button>           
+        <button>Diverse</button>
+    </div>
+
+    <div class="IMG"> <img src="../img/Alt%20sammen.jpg" alt="Posisjons kart"> </div>
+
+    <button>BESTILL</button>
+</main>
+
+
+
+<footer>
+    <p id="Beskyttet">Alt innholdet er beskyttet i henhold til til norsk lov om opphavsrett, Åndsverkloven.</p>
+    <p id="rettigheter">Alle rettigheter: Oblig 2021</p>
+    <a href="KontaktInformasjon.html" id="kontaktinfo">Kontakt informasjon</a>
+    <p id="navn">&copy; Mathias van der Bend</p>
+</footer>
 
 </body>
 </html>
